--- a/Directives/src/app/app.component.html
+++ b/Directives/src/app/app.component.html
@@ -5,4 +5,10 @@
 <!--<app-my-ngfor-track-by></app-my-ngfor-track-by>-->
 <!--<app-my-ngclass></app-my-ngclass>-->
 <!--<app-my-ngstyle></app-my-ngstyle>-->
+<app-zippy title="Hello">
+  Hello
+</app-zippy>
+<app-zippy title="Bye">
+  Bye
+</app-zippy>
 
