--- a/Forms/src/app/template-driven/comment-form/comment-form.component.html
+++ b/Forms/src/app/template-driven/comment-form/comment-form.component.html
@@ -1,13 +1,17 @@
-<form>
-  <div class="form-group">
-    <label for="firstName">Firts Name</label>
-    <input required minlength="3" maxlength="10" pattern="banana" ngModel name="firstName" #firstName="ngModel" (change)="log(firstName)" id="firstName" type="text" class="form-control">
-    <div class="alert alert-danger" *ngIf="firstName.touched && !firstName.valid">
-      <div *ngIf="firstName.errors.required">This field is required</div>
-      <div *ngIf="firstName.errors.minlength">Min length is {{ firstName.errors.minlength.requiredLength }}</div>
-      <div *ngIf="firstName.errors.pattern">The patter is not valid</div>
+<form #f="ngForm" (submit)="submit(f)">
+  <div ngModelGroup="contact" #contact="ngModelGroup">
+    <div *ngIf="!contact.valid">...</div>
+    <div class="form-group">
+      <label for="firstName">Firts Name</label>
+      <input required minlength="3" maxlength="10" pattern="banana" ngModel name="firstName" #firstName="ngModel" (change)="log(firstName)" id="firstName" type="text" class="form-control">
+      <div class="alert alert-danger" *ngIf="firstName.touched && !firstName.valid">
+        <div *ngIf="firstName.errors.required">This field is required</div>
+        <div *ngIf="firstName.errors.minlength">Min length is {{ firstName.errors.minlength.requiredLength }}</div>
+        <div *ngIf="firstName.errors.pattern">The patter is not valid</div>
+      </div>
     </div>
   </div>
+
   <div class="form-group">
     <label for="comment">Comment</label>
     <textarea ngModel name="comment" id="comment" cols="30" rows="10" class="form-control"></textarea>
