--- a/Forms/src/app/template-driven/comment-form/comment-form.component.html
+++ b/Forms/src/app/template-driven/comment-form/comment-form.component.html
@@ -16,5 +16,38 @@
     <label for="comment">Comment</label>
     <textarea ngModel name="comment" id="comment" cols="30" rows="10" class="form-control"></textarea>
   </div>
-  <button class="btn btn-primary">Submit</button>
+  <div class="checkbox">
+    <label>
+      <input type="checkbox" ngModel name="isSubscribed"> Subscribe to mailing list
+    </label>
+  </div>
+  <div class="form-group">
+    <label for="contactMethod">Contact Method</label>
+    <select ngModel name="contactMethod" id="contactMethod" class="form-control">
+      <option *ngFor="let method of contactMethods" [value]="method.id">{{ method.name }}</option>
+    </select>
+  </div>
+  <div class="form-group">
+    <label for="contactMethod2">Contact Method 2</label>
+    <select ngModel name="contactMethod2" id="contactMethod2" class="form-control">
+      <option *ngFor="let method of contactMethods" [ngValue]="method">{{ method.name }}</option>
+    </select>
+  </div>
+  <div class="form-group">
+    <label for="contactMethod3">Contact Method 3</label>
+    <select multiple ngModel name="contactMethod3" id="contactMethod3" class="form-control">
+      <option *ngFor="let method of contactMethods" [value]="method.id">{{ method.name }}</option>
+    </select>
+  </div>
+  <div class="form-group">
+    <div *ngFor="let methods of contactMethods" class="radio">
+      <label>
+        <input ngModel type="radio" name="contactRadio" [value]="methods.id">{{ methods.name }}
+      </label>
+    </div>
+  </div>
+  <p>
+    {{ f.value | json }}
+  </p>
+  <button class="btn btn-primary" [disabled]="!f.valid">Submit</button>
 </form>
