--- a/Forms/src/app/app.component.html
+++ b/Forms/src/app/app.component.html
@@ -1,2 +1,3 @@
 <!--<app-comment-form></app-comment-form>-->
-<app-assignment-form></app-assignment-form>
+<!--<app-assignment-form></app-assignment-form>-->
+<signup-form></signup-form>
