--- a/Forms/src/app/template-driven/assignment-form/assignment-form.component.html
+++ b/Forms/src/app/template-driven/assignment-form/assignment-form.component.html
@@ -8,11 +8,10 @@
     </div>
   </div>
   <div class="form-group">
-    <label>Category</label>
-    <input required ngModel name="category" #category="ngModel" class="form-control">
-    <div class="alert alert-danger" *ngIf="courseN.touched && !courseN.valid">
-      <div *ngIf="courseN.errors.required">This field is required</div>
-    </div>
+    <label for="category">Contact Method</label>
+    <select ngModel name="category" id="category" class="form-control">
+      <option *ngFor="let cat of categoryList" [value]="cat.id">{{ cat.name }}</option>
+    </select>
   </div>
   <div class="form-group">
     <div class="checkbox">
