--- a/Forms/src/app/reactive/signup-form/signup-form.component.html
+++ b/Forms/src/app/reactive/signup-form/signup-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form">
+<form [formGroup]="form" (submit)="login()">
     <div class="form-group">
         <label for="username">Username</label>
         <input
@@ -6,6 +6,7 @@
             id="username"
             type="text"
             class="form-control">
+        <div *ngIf="username.pending">Checking for unique</div>
         <div *ngIf="username.touched && username.invalid" class="alert alert-danger">
           <div *ngIf="username.errors.required">Username is required</div>
           <div *ngIf="username.errors.minlength">Min length is {{ username.errors.minlength.requiredLength }}</div>
