--- a/HttpServices/src/app/get-data/get-data.component.html
+++ b/HttpServices/src/app/get-data/get-data.component.html
@@ -1,6 +1,7 @@
 <input (keyup.enter)="createPost(title)" #title type="text">
 <ul>
   <li *ngFor="let post of posts">
+    <button (click)="updatePost(post)">Update</button>
     {{ post.title }}
   </li>
 </ul>
