--- a/HttpServices/src/app/get-data/get-data.component.html
+++ b/HttpServices/src/app/get-data/get-data.component.html
@@ -2,6 +2,7 @@
 <ul>
   <li *ngFor="let post of posts">
     <button (click)="updatePost(post)">Update</button>
+    <button (click)="deletePost(post)">Delete</button>
     {{ post.title }}
   </li>
 </ul>
